--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,5 +3,8 @@
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movie_poster"
-    android:layout_width="185dp"
-    android:layout_height="200dp"/>
+    android:layout_width="match_parent"
+    android:layout_height="250dp"
+    android:layout_below="@+id/movies_toolbar"
+    android:scaleType="centerCrop"
+    />
