--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MoviesActivity">
+    tools:context=".activity.MoviesActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/movies_toolbar"
