--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,71 +8,127 @@
         android:id="@+id/detail_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        android:background="@drawable/toolbar_semitransparent_background"
+        android:elevation="@dimen/toolbar_elevation"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:navigationIcon="?attr/homeAsUpIndicator"/>
 
     <ScrollView
         android:id="@+id/detail_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_light"
-        android:layout_below="@+id/detail_toolbar">
-
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@android:color/holo_red_light">
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/movie_backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@android:color/holo_orange_light">
+                android:padding="@dimen/detail_content_padding">
 
                 <ImageView
-                    android:id="@+id/detail_image"
+                    android:id="@+id/movie_poster"
                     android:layout_width="@dimen/detail_poster_width"
                     android:layout_height="@dimen/detail_poster_height"
-                    android:layout_margin="16dp"
-                    android:background="#000000"/>
+                    android:layout_marginEnd="@dimen/detail_poster_margin_right"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:background="@android:color/holo_green_light">
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/detail_title"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/background_dark"
-                        android:gravity="center"
-                        android:layout_margin="16dp"/>
-                    <TextView
-                        android:id="@+id/detail_rating"
+                        android:orientation="vertical"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="3dp"
+                            android:textSize="@dimen/detail_label_text_size"
+                            android:text="@string/title"/>
+
+                        <TextView
+                            android:id="@+id/movie_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/detail_value_text_size"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_margin="16dp"/>
-                    <TextView
-                        android:id="@+id/detail_release"
+                        android:orientation="vertical"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="3dp"
+                            android:textSize="@dimen/detail_label_text_size"
+                            android:text="@string/rating"/>
+
+                        <TextView
+                            android:id="@+id/movie_rating"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/detail_value_text_size"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"/>
+                        android:orientation="vertical"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="3dp"
+                            android:textSize="@dimen/detail_label_text_size"
+                            android:text="@string/release_date"/>
+
+                        <TextView
+                            android:id="@+id/movie_release_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/detail_value_text_size"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
+
             </LinearLayout>
 
             <TextView
-                android:id="@+id/detail_synopsis"
+                android:id="@+id/movie_overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/darker_gray" />
+                android:paddingLeft="@dimen/detail_content_padding"
+                android:paddingRight="@dimen/detail_content_padding"
+                android:paddingBottom="@dimen/detail_content_padding"
+                android:textSize="@dimen/detail_overview_text_size"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
