--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/movie_poster"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:layout_below="@+id/movies_toolbar"
-    android:scaleType="centerCrop"
-    />
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/grid_item_padding">
+
+    <ImageView
+        android:id="@+id/movie_poster"
+        android:layout_width="@dimen/grid_poster_width"
+        android:layout_height="@dimen/grid_poster_height"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:background="@android:color/darker_gray"/>
+
+</FrameLayout>
