--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="detail_poster_width">150dp</dimen>
-    <dimen name="detail_poster_height">200dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="loading_view_width_height">80dp</dimen>
+    <dimen name="grid_item_padding">8dp</dimen>
+    <dimen name="grid_poster_width">160dp</dimen>
+    <dimen name="grid_poster_height">240dp</dimen>
+    <dimen name="grid_error_view_padding">16dp</dimen>
+    <dimen name="grid_error_label_margin_bottom">12dp</dimen>
+    <dimen name="grid_error_label_text_size">18sp</dimen>
+    <dimen name="detail_content_padding">16dp</dimen>
+    <dimen name="detail_poster_width">125dp</dimen>
+    <dimen name="detail_poster_height">187.5dp</dimen>
+    <dimen name="detail_poster_margin_right">10dp</dimen>
+    <dimen name="detail_label_text_size">16sp</dimen>
+    <dimen name="detail_value_text_size">16sp</dimen>
+    <dimen name="detail_overview_text_size">16sp</dimen>
 </resources>
