--- a/app/src/main/res/layout/loading_item.xml
+++ b/app/src/main/res/layout/loading_item.xml
@@ -7,18 +7,18 @@
 
     <ProgressBar
         android:id="@+id/loading_view"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/grid_loading_progress_width_height"
+        android:layout_height="@dimen/grid_loading_progress_width_height"
         android:layout_gravity="center"
-        android:layout_marginEnd="6dp"/>
+        android:layout_marginEnd="@dimen/grid_loading_progress_margin_end"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/loading_view"
         android:layout_centerVertical="true"
-        android:textSize="18sp"
+        android:textSize="@dimen/grid_loading_label_text_size"
         android:textStyle="bold"
-        android:text="LOADING"/>
+        android:text="@string/loading"/>
 
 </RelativeLayout>
