--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,9 @@
     <dimen name="loading_view_width_height">80dp</dimen>
     <dimen name="grid_item_padding">8dp</dimen>
     <dimen name="grid_loading_item_padding">10dp</dimen>
+    <dimen name="grid_loading_progress_width_height">30dp</dimen>
+    <dimen name="grid_loading_progress_margin_end">6dp</dimen>
+    <dimen name="grid_loading_label_text_size">18sp</dimen>
     <dimen name="grid_poster_width">160dp</dimen>
     <dimen name="grid_poster_height">240dp</dimen>
     <dimen name="grid_error_view_padding">16dp</dimen>
