--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DetailMovieTextLabel">
+        <item name="android:textSize">@dimen/detail_label_text_size</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="DetailMovieTextValue">
+        <item name="android:textSize">@dimen/detail_value_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/detail_text_color</item>
+    </style>
+
 </resources>
