Add missing /movie/top_rated endpoint and remove manual sorting

--- a/app/src/main/res/layout/loading_item.xml
+++ b/app/src/main/res/layout/loading_item.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/loading_view"
         android:layout_centerVertical="true"
+        android:textColor="@color/white"
         android:textSize="@dimen/grid_loading_label_text_size"
         android:textStyle="bold"
         android:text="@string/loading"/>
