--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">#EF6C00</color>
     <color name="colorPrimaryDark">#E65100</color>
-    <color name="colorAccent">#1A237E</color>
+    <color name="colorAccent">#AD1457</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="black_alpha">#66000000</color>
     <color name="dark_background">#263238</color>
-    <color name="detail_text_color">#ffffff</color>
+    <color name="detail_text_color">@color/white</color>
 </resources>
