--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -31,4 +31,30 @@
         android:layout_below="@+id/review_toolbar"
         android:visibility="gone"/>
 
+    <LinearLayout
+        android:id="@+id/no_data_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@id/movies_toolbar"
+        android:padding="@dimen/grid_error_view_padding"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            style="@style/NoDataTextStyle"
+            android:id="@+id/no_data_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/grid_error_label_margin_bottom"
+            android:text="@string/reviews_error_message"/>
+
+        <Button
+            android:id="@+id/retry_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/retry"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
