--- a/app/src/main/res/layout/trailer_layout.xml
+++ b/app/src/main/res/layout/trailer_layout.xml
@@ -4,22 +4,23 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="start|center_vertical"
-    android:padding="12dp">
+    android:padding="@dimen/trailer_layout_padding"
+    android:background="@drawable/section_selector">
 
-    <View
+    <ImageView
         android:id="@+id/trailer_thumbnail"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:background="@color/black"
-        android:layout_gravity="center"/>
+        android:layout_width="@dimen/trailer_thumbnail_width"
+        android:layout_height="@dimen/trailer_thumbnail_height"
+        android:scaleType="center"
+        android:src="@drawable/ic_play_circle_white"
+        android:background="@drawable/trailer_thumbnail_selector"/>
 
     <TextView
         android:id="@+id/trailer_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/trailer_name_margin_start"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        android:text="Trailer 1"/>
+        android:textSize="@dimen/trailer_name_text_size"/>
 
 </LinearLayout>
