--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="black">#000000</color>
     <color name="black_alpha">#66000000</color>
+    <color name="black_800">#424242</color>
 
     <color name="white">#ffffff</color>
 
