--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="toolbar_elevation">4dp</dimen>
     <dimen name="loading_view_width_height">80dp</dimen>
+
     <dimen name="grid_item_padding">8dp</dimen>
     <dimen name="grid_loading_item_padding">10dp</dimen>
     <dimen name="grid_loading_progress_width_height">30dp</dimen>
@@ -12,7 +13,9 @@
     <dimen name="grid_error_view_padding">16dp</dimen>
     <dimen name="grid_error_label_margin_bottom">12dp</dimen>
     <dimen name="grid_error_label_text_size">18sp</dimen>
-    <dimen name="detail_content_padding">16dp</dimen>
+
+    <dimen name="detail_content_padding">12dp</dimen>
+    <dimen name="detail_section_margin_bottom">12dp</dimen>
     <dimen name="detail_poster_width">125dp</dimen>
     <dimen name="detail_poster_height">187.5dp</dimen>
     <dimen name="detail_poster_margin_right">10dp</dimen>
@@ -20,7 +23,13 @@
     <dimen name="detail_value_text_size">16sp</dimen>
     <dimen name="detail_overview_text_size">16sp</dimen>
     <dimen name="detail_label_section_size">18sp</dimen>
+
     <dimen name="review_item_margin_top_bottom">6dp</dimen>
-    <dimen name="review_item_padding">12dp</dimen>
-    <dimen name="review_text_margin_top">6dp</dimen>
+    <dimen name="review_content_padding">12dp</dimen>
+
+    <dimen name="trailer_layout_padding">12dp</dimen>
+    <dimen name="trailer_thumbnail_width">80dp</dimen>
+    <dimen name="trailer_thumbnail_height">50dp</dimen>
+    <dimen name="trailer_name_margin_start">16dp</dimen>
+    <dimen name="trailer_name_text_size">16sp</dimen>
 </resources>
