--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -118,6 +118,31 @@
 
             </LinearLayout>
 
+            <RelativeLayout
+                android:id="@+id/add_remove_favorites_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/detail_section_margin_bottom"
+                android:background="@drawable/section_selector">
+
+                <TextView
+                    style="@style/DetailMovieSectionLabel"
+                    android:id="@+id/add_remove_favorites_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_to_favorites"/>
+
+                <ImageView
+                    android:id="@+id/add_remove_favorites_icon"
+                    android:layout_width="@dimen/favorites_icon_width_height"
+                    android:layout_height="@dimen/favorites_icon_width_height"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="12dp"
+                    android:src="@drawable/ic_star_border_white"/>
+
+            </RelativeLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
