--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -44,7 +44,8 @@
                     android:id="@+id/movie_poster"
                     android:layout_width="@dimen/detail_poster_width"
                     android:layout_height="@dimen/detail_poster_height"
-                    android:layout_marginEnd="@dimen/detail_poster_margin_right"/>
+                    android:layout_marginEnd="@dimen/detail_poster_margin_right"
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
