--- a/app/src/main/res/menu/sort_menu.xml
+++ b/app/src/main/res/menu/sort_menu.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <group android:checkableBehavior="single">
-        <item android:id="@+id/most_popular"
-            android:title="Most popular"
-            />
-        <item android:id="@+id/top_rated"
-            android:title="Top rated" />
+        <item android:id="@+id/most_popular" android:title="@string/most_popular"/>
+        <item android:id="@+id/top_rated" android:title="@string/top_rated"/>
+        <item android:id="@+id/favorite_movies" android:title="@string/favorites"/>
     </group>
 </menu>
